--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
     td {
         border: 1px solid #000;
     }
+
+    .column-selector:hover {
+        /* border: 2px solid red; */
+        background-color: red;
+    }
 </style>
 
 <body>
@@ -36,13 +41,53 @@
             </tr>
         </thead>
         <tbody>
-            <!--   <tr>
-   <td><input type="checkbox" /></td>
-   <td>10Mb</td>
-   <td>C:\Users\BrainBell\Desktop\Empty\abc.txt</td>
-  </tr> -->
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+            <tr>
+                <td>
+                    <input type="checkbox" />
+                </td>
+                <td>10Mb</td>
+                <td>C:\Users\shubham\Desktop\Empty\abc.txt</td>
+            </tr>
+
         </tbody>
     </table>
+
+    <script src="main.js"> </script>
 </body>
 
 </html>
